manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-nginx
  labels:
    app: webapp-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-nginx
  template:
    metadata:
      labels:
        app: webapp-nginx
    spec:
      containers:
      - name: webapp-nginx
        image: varshadevopsassessment.azurecr.io/webapp
        ports:
        - containerPort: 80
