manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: webapp-nginx
