manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - varsha.one
    secretName: tls-secret
  rules:
  - host: varsha.one
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: webapp-nginx
            port:
              number: 80
